various bug fixed - added missing "?" character to text selector - fixed duplicating switch sound on icon hovering - fixed long messages with no spaces going off-screen

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -27,7 +27,8 @@ div.textselector > div.textselector-options {
 }
 
 div.textselector-prompt > span.textselector-val {
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
 div.textselector-prompt > span.textselector-val::after {
